--- a/index.html
+++ b/index.html
@@ -9,29 +9,11 @@
     <link rel="icon" type="image/x-icon" href="static/img/favicon_96x96.ico" sizes="96x96">
   </head>
   <body>
-	<header>
-	  <nav class="navbar navbar-light bg-light">
-	    <div class="container-fluid">
-	  	  <a class="navbar-brand" href="/">
-		    <img src="../static/img/favicon_96x96.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
-		    <b>Ma.kak.si</b>
-		  </a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		    <div class="navbar-nav">
-			  <a class="nav-link active" aria-current="page" href="/explore">Explore</a>
-			  <a class="nav-link" href="#">nav-link1</a>
-			  <a class="nav-link" href="#">nav-link2</a>
-		    </div>
-		  </div>
-	    </div>
-	  </nav>
-	</header>
+    <header>
+      Ma.kak.si
+    </header>
     <main>
-	  <title>Ma.kak.si</title>
-	  jjj
+      <title>Ma.kak.si</title>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
