--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Explore</title>
-	  <div style="width: 80%; margin-left: 10%; margin-top: 6.5%" id="carouselExampleIndicators" class="carousel carousel-dark slide"
+	  <div style="width: 80%; margin-left: 10%; padding-top: 100px" id="carouselExampleIndicators" class="carousel carousel-dark slide"
 	  data-bs-ride="carousel" data-bs-touch="false">
 		<div class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
@@ -74,7 +74,7 @@
 		  <span class="visually-hidden">Следующий</span>
 		</button>
 	  </div>
-	  <div style="margin-top: 13%; padding-bottom: 6.5%" class="accordion" id="accordionExample">
+	  <div style="padding-top: 100px; margin-left: 10%; padding-bottom: 300px; width: 80%" class="accordion" id="accordionExample">
 		<div class="accordion-item">
 		  <h2 class="accordion-header" id="headingOne">
 			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
