--- a/makent.html
+++ b/makent.html
@@ -30,7 +30,8 @@
 		    <b style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
             -webkit-text-fill-color: transparent; -webkit-background-clip: text;">a.kak.si</b>
 		  </a>
-		  <button class="navbar-toggler" style="background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue);" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+		  <button class="navbar-toggler" style="background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue);"
+		  type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
 		  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -46,71 +47,9 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Makent</title>
-	  <div style="width: 80%; margin-left: 10%; margin-top: 6.5%" id="carouselExampleIndicators" class="carousel carousel-dark slide"
-	  data-bs-ride="carousel" data-bs-touch="false">
-		<div class="carousel-indicators">
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
-		  aria-label="Slide 1"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		</div>
-		<div class="carousel-inner">
-		  <div class="carousel-item active" data-bs-interval="6000">
-			<img src="img/1.jpg" class="d-block w-100" alt="...">
-		  </div>
-		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="img/1.jpg" class="d-block w-100" alt="...">
-		  </div>
-		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="img/1.jpg" class="d-block w-100" alt="...">
-		  </div>
-		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Предыдущий</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Следующий</span>
-		</button>
-	  </div>
-	  <div style="margin-top: 13%; padding-bottom: 6.5%" class="accordion" id="accordionExample">
-		<div class="accordion-item">
-		  <h2 class="accordion-header" id="headingOne">
-			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-			  Элемент аккордеона #1
-			</button>
-		  </h2>
-		  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <strong>Это тело аккордеона первого элемента.</strong> Оно отображается по умолчанию, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
-			</div>
-		  </div>
-		</div>
-		<div class="accordion-item">
-		  <h2 class="accordion-header" id="headingTwo">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-				Элемент аккордеона #2
-			</button>
-		  </h2>
-		  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <strong>Это тело аккордеона второго элемента.</strong> По умолчанию он скрыт, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
-			</div>
-		  </div>
-		</div>
-		<div class="accordion-item">
-		  <h2 class="accordion-header" id="headingThree">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-				Элемент аккордеона #3
-			</button>
-		  </h2>
-		  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <strong>Это тело аккордеона третьего элемента.</strong> По умолчанию оно скрыто, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
-			</div>
-		  </div>
-		</div>
+	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-top: 150px; padding-bottom: 100px">
+		<div class="col-md-6">Mapagmataas</div>
+		<div class="col-md-6">Mapagmataas</div>
 	  </div>
     </main>
     <footer class="copybar fixed-bottom text-center text-lg-start bg-dark">
