--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 		    <b style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
             -webkit-text-fill-color: transparent; -webkit-background-clip: text;">a.kak.si</b>
 		  </a>
-		  <button class="navbar-toggler" style="background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue);" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+		  <button class="navbar-toggler" style="background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue);"
+          type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
 		  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -46,7 +47,7 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Explore</title>
-	  <div style="width: 80%; margin-left: 10%; padding-top: 100px; padding-bottom: 100px" id="carouselExampleIndicators" class="carousel carousel-dark slide"
+	  <div style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em" id="carouselExampleIndicators" class="carousel carousel-dark slide"
 	  data-bs-ride="carousel" data-bs-touch="false">
 		<div class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
@@ -74,7 +75,10 @@
 		  <span class="visually-hidden">Следующий</span>
 		</button>
 	  </div>
-	  <div style="width: 80%; margin-left: 10%;  padding-top: 100px; padding-bottom: 100px" class="accordion" id="accordionExample">
+      <div style="width: 80%; margin-left: 10%; padding-bottom: 3.25em; text-align: center">
+        ma.kak.si
+      </div>
+	  <div style="width: 80%; margin-left: 10%;  padding-top: 6.5em; padding-bottom: 6.5em" class="accordion" id="accordionExample">
 		<div class="accordion-item">
 		  <h2 class="accordion-header" id="headingOne">
 			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
