--- a/makent.html
+++ b/makent.html
@@ -47,9 +47,9 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Makent</title>
-	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-top: 150px; padding-bottom: 100px">
-		<div class="col-md-6">Mapagmataas</div>
-		<div class="col-md-6">Mapagmataas</div>
+	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em">
+		<div class="col-md-6">Makent</div>
+		<div class="col-md-6">instaler</div>
 	  </div>
     </main>
     <footer class="copybar fixed-bottom text-center text-lg-start bg-dark">
