--- a/projects.html
+++ b/projects.html
@@ -47,9 +47,13 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Projects</title>
-	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-top: 150px; padding-bottom: 100px">
-		<div class="col-md-6">Mapagmataas</div>
-		<div class="col-md-6">Mapagmataas</div>
+	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-top: 6.5em">
+		<div class="col-md-6">1proj</div>
+		<div class="col-md-6">2ects</div>
+	  </div>
+	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-bottom: 6.5em">
+		<div class="col-md-6">3proj</div>
+		<div class="col-md-6">4ects</div>
 	  </div>
     </main>
     <footer class="copybar fixed-bottom text-center text-lg-start bg-dark">
