--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 		</div>
 		<div class="carousel-inner">
 		  <div class="carousel-item active" data-bs-interval="6000">
-			<img src="img/1.jpg" class="d-block w-100" alt="...">
+			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="img/1.jpg" class="d-block w-100" alt="...">
+			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="img/1.jpg" class="d-block w-100" alt="...">
+			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
