--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Explore</title>
-	  <div style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em" id="carouselExampleIndicators" class="carousel carousel-dark slide"
-	  data-bs-ride="carousel" data-bs-touch="false">
+	  <div style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em" id="carouselExampleIndicators"
+	  class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-touch="false">
 		<div class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
 		  aria-label="Slide 1"></button>
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		</div>
-		<div class="carousel-inner">
+		<div style="max-height: 40em;" class="carousel-inner">
 		  <div class="carousel-item active" data-bs-interval="6000">
 			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
@@ -81,7 +81,8 @@
 	  <div style="width: 80%; margin-left: 10%;  padding-top: 6.5em; padding-bottom: 6.5em" class="accordion" id="accordionExample">
 		<div class="accordion-item">
 		  <h2 class="accordion-header" id="headingOne">
-			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+			aria-expanded="true" aria-controls="collapseOne">
 			  Элемент аккордеона #1
 			</button>
 		  </h2>
@@ -93,7 +94,8 @@
 		</div>
 		<div class="accordion-item">
 		  <h2 class="accordion-header" id="headingTwo">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+			aria-expanded="false" aria-controls="collapseTwo">
 				Элемент аккордеона #2
 			</button>
 		  </h2>
@@ -105,7 +107,8 @@
 		</div>
 		<div class="accordion-item">
 		  <h2 class="accordion-header" id="headingThree">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+			aria-expanded="false" aria-controls="collapseThree">
 				Элемент аккордеона #3
 			</button>
 		  </h2>
