--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			  <a class="nav-link" href="/author">About Author</a>
 			  <a class="nav-link" href="/projects">Projects</a>
 			  <a class="nav-link" href="#">#</a>
+			  <a class="nav-link"></a>
 		    </div>
 		  </div>
 	    </div>
@@ -49,7 +50,7 @@
 	  <title>Ma.kak.si Explore</title>
 	  <div style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em" id="carouselExampleIndicators"
 	  class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-touch="false">
-		<div class="carousel-indicators">
+		<div style="padding-bottom: 1em" class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
 		  aria-label="Slide 1"></button>
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -66,55 +67,56 @@
 			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		<button style="margin-left: -14%" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Предыдущий</span>
 		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		<button style="margin-right: -14%" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Следующий</span>
 		</button>
 	  </div>
-      <div style="width: 80%; margin-left: 10%; padding-bottom: 3.25em; text-align: center">
-        ma.kak.si
-      </div>
-	  <div style="width: 80%; margin-left: 10%;  padding-top: 6.5em; padding-bottom: 6.5em" class="accordion" id="accordionExample">
-		<div class="accordion-item">
+      <div style="width: 80%; margin-left: 10%; text-align: center">ma.kak.si</div>
+	  <div style="width: 80%; margin-left: 10%;  padding-top: 3.25em; padding-bottom: 3.25em" class="accordion" id="accordionExample">
+		<div style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, skyblue, skyblue, deepskyblue);" class="accordion-item">
 		  <h2 class="accordion-header" id="headingOne">
-			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-			aria-expanded="true" aria-controls="collapseOne">
-			  Элемент аккордеона #1
-			</button>
+			<button style="background: linear-gradient(90deg, deepskyblue, skyblue, skyblue, deepskyblue);"
+			class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+			aria-expanded="true" aria-controls="collapseOne">1.</button>
 		  </h2>
 		  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <strong>Это тело аккордеона первого элемента.</strong> Оно отображается по умолчанию, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+			<div style="max-height: 39em" class="accordion-body">
+			  <div style="max-height: 37em" class="ratio ratio-16x9">
+				<iframe src="https://www.youtube.com/embed/A1OqtIqzScI" title="YouTube video" allowfullscreen></iframe>
+			  </div>
 			</div>
 		  </div>
 		</div>
-		<div class="accordion-item">
+		<div style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, skyblue, skyblue, deepskyblue);" class="accordion-item">
 		  <h2 class="accordion-header" id="headingTwo">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-			aria-expanded="false" aria-controls="collapseTwo">
-				Элемент аккордеона #2
-			</button>
+			<button style="background: linear-gradient(90deg, deepskyblue, skyblue, skyblue, deepskyblue);"
+			class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+			aria-expanded="false" aria-controls="collapseTwo">2.</button>
 		  </h2>
 		  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <strong>Это тело аккордеона второго элемента.</strong> По умолчанию он скрыт, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+			<div style="max-height: 39em" class="accordion-body">
+			  <div style="max-height: 37em; height: max-content;" class="ratio ratio-16x9">
+				<a href="/">makent</a>
+			  </div>
 			</div>
 		  </div>
 		</div>
-		<div class="accordion-item">
+		<div style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, skyblue, skyblue, deepskyblue);" class="accordion-item">
 		  <h2 class="accordion-header" id="headingThree">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
-			aria-expanded="false" aria-controls="collapseThree">
-				Элемент аккордеона #3
-			</button>
+			<button style="background: linear-gradient(90deg, deepskyblue, skyblue, skyblue, deepskyblue);"
+			class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+			aria-expanded="false" aria-controls="collapseThree">3.</button>
 		  </h2>
 		  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <strong>Это тело аккордеона третьего элемента.</strong> По умолчанию оно скрыто, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+			<div style="max-height: 39em" class="accordion-body">
+			  <div style="max-height: 37em; height: max-content;" class="ratio ratio-16x9">
+				<a href="/">makent</a>
+			  </div>
 			</div>
 		  </div>
 		</div>
