--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		</div>
-		<div style="max-height: 40em;" class="carousel-inner">
+		<div style="max-height: 40em" class="carousel-inner">
 		  <div class="carousel-item active" data-bs-interval="6000">
 			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
@@ -67,11 +67,11 @@
 			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		</div>
-		<button style="margin-left: -13%" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		<button style="max-width: 5%; margin-left: -9%" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Предыдущий</span>
 		</button>
-		<button style="margin-right: -13%" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		<button style="max-width: 5%; margin-right: -9%" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Следующий</span>
 		</button>
