--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@
 			  <a class="nav-link" href="/author">About Author</a>
 			  <a class="nav-link active" aria-current="page" href="/projects">Projects</a>
 			  <a class="nav-link" href="#">#</a>
+			  <a class="nav-link"></a>
 		    </div>
 		  </div>
 	    </div>
