--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="img/favicon_16x16.ico" sizes="16x16">
-    <link rel="icon" type="image/x-icon" href="img/favicon_32x32.ico" sizes="32x32">
-    <link rel="icon" type="image/x-icon" href="img/favicon_96x96.ico" sizes="96x96">
+	<link rel="icon" type="image/png" href="icons/1/32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="icons/1/128.png" sizes="128x128">
+	<link rel="icon" type="image/png" href="icons/1/180.png" sizes="180x180">
+	<link rel="icon" type="image/png" href="icons/1/192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="icons/1/512.png" sizes="512x512">
 	<style>
 	  .navbar {
 		border-bottom-style: ridge;
@@ -26,9 +28,9 @@
 	  <nav class="navbar fixed-top navbar-dark bg-dark">
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
-		    <img src="img/favicon_96x96.ico" alt="M" width="24" height="24" class="d-inline-block align-text-top">
+		    <img src="icons/1/32.png" alt="Ma" width="32" height="32" class="d-inline-block align-text-top">
 		    <b style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
-            -webkit-text-fill-color: transparent; -webkit-background-clip: text;">a.kak.si</b>
+            -webkit-text-fill-color: transparent; -webkit-background-clip: text;">.kak.si</b>
 		  </a>
 		  <button class="navbar-toggler" style="background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue);"
           type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -48,9 +50,14 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Explore</title>
-	  <div style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em" id="carouselExampleIndicators"
+	  <div style="width: 80%; margin-left: 10%; padding-top: 6.5em; text-align: center">
+		<img src="icons/2/512.png" alt="Ma.kak.si">
+		slowly changes then cursor on it
+		<img src="icons/1/512.png" alt="Ma.kak.si">
+	  </div>
+	  <div style="width: 80%; margin-left: 10%; padding-top: 3.25em; padding-bottom: 6.5em" id="carouselExampleIndicators"
 	  class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-touch="false">
-		<div style="padding-bottom: 1em" class="carousel-indicators">
+		<div class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
 		  aria-label="Slide 1"></button>
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -58,25 +65,24 @@
 		</div>
 		<div style="max-height: 40em" class="carousel-inner">
 		  <div class="carousel-item active" data-bs-interval="6000">
-			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
+			<img src="imgs/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
+			<img src="imgs/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="img/carousel.jpg" class="d-block w-100" alt="...">
+			<img src="imgs/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		</div>
-		<button style="max-width: 5%; margin-left: -9%" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		<button style="max-height: 40em; max-width: 5%; margin-left: -9%; margin-bottom: 3.25em" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Предыдущий</span>
 		</button>
-		<button style="max-width: 5%; margin-right: -9%" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		<button style="max-height: 40em; max-width: 5%; margin-right: -9%; vertical-align: middle; margin-bottom: 3.25em" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Следующий</span>
 		</button>
 	  </div>
-      <div style="width: 80%; margin-left: 10%; text-align: center">ma.kak.si</div>
 	  <div style="width: 80%; margin-left: 10%;  padding-top: 3.25em; padding-bottom: 3.25em" class="accordion" id="accordionExample">
 		<div style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, skyblue, skyblue, deepskyblue);" class="accordion-item">
 		  <h2 class="accordion-header" id="headingOne">
