--- a/makent.html
+++ b/makent.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="img/favicon_16x16.ico" sizes="16x16">
-    <link rel="icon" type="image/x-icon" href="img/favicon_32x32.ico" sizes="32x32">
-    <link rel="icon" type="image/x-icon" href="img/favicon_96x96.ico" sizes="96x96">
+	<link rel="icon" type="image/png" href="icons/1/32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="icons/1/128.png" sizes="128x128">
+	<link rel="icon" type="image/png" href="icons/1/180.png" sizes="180x180">
+	<link rel="icon" type="image/png" href="icons/1/192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="icons/1/512.png" sizes="512x512">
 	<style>
 	  .navbar {
 		border-bottom-style: ridge;
@@ -26,7 +28,7 @@
 	  <nav class="navbar fixed-top navbar-dark bg-dark">
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
-		    <img src="img/favicon_96x96.ico" alt="M" width="24" height="24" class="d-inline-block align-text-top">
+		    <img src="icons/1/32.png" alt="Ma" width="32" height="32" class="d-inline-block align-text-top">
 		    <b style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
             -webkit-text-fill-color: transparent; -webkit-background-clip: text;">a.kak.si</b>
 		  </a>
