--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link rel="icon" type="image/png" href="icons/1/32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="icons/1/64.png" sizes="64x64">
+	<link rel="icon" type="image/png" href="icons/1/96.png" sizes="96x96">
 	<link rel="icon" type="image/png" href="icons/1/128.png" sizes="128x128">
 	<link rel="icon" type="image/png" href="icons/1/180.png" sizes="180x180">
 	<link rel="icon" type="image/png" href="icons/1/192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="icons/1/256.png" sizes="256x256">
 	<link rel="icon" type="image/png" href="icons/1/512.png" sizes="512x512">
 	<style>
 	  .navbar {
@@ -28,7 +31,7 @@
 	  <nav class="navbar fixed-top navbar-dark bg-dark">
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
-		    <img src="icons/1/32.png" alt="Ma" width="32" height="32" class="d-inline-block align-text-top">
+		    <img src="icons/1/64.png" alt="Ma" width="32" height="32" class="d-inline-block align-text-top">
 		    <b style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
             -webkit-text-fill-color: transparent; -webkit-background-clip: text;">.kak.si</b>
 		  </a>
@@ -50,12 +53,7 @@
 	</header>
     <main>
 	  <title>Ma.kak.si Explore</title>
-	  <div style="width: 80%; margin-left: 10%; padding-top: 6.5em; text-align: center">
-		<img src="icons/2/512.png" alt="Ma.kak.si">
-		slowly changes then cursor on it
-		<img src="icons/1/512.png" alt="Ma.kak.si">
-	  </div>
-	  <div style="width: 80%; margin-left: 10%; padding-top: 3.25em; padding-bottom: 6.5em" id="carouselExampleIndicators"
+	  <div style="width: 80%; margin-left: 10%; padding-top: 8.75em; padding-bottom: 6.5em" id="carouselExampleIndicators"
 	  class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-touch="false">
 		<div class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
@@ -74,11 +72,11 @@
 			<img src="imgs/carousel.jpg" class="d-block w-100" alt="...">
 		  </div>
 		</div>
-		<button style="max-height: 40em; max-width: 5%; margin-left: -9%; margin-bottom: 3.25em" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		<button style="max-width: 5%; margin-left: -9%" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Предыдущий</span>
 		</button>
-		<button style="max-height: 40em; max-width: 5%; margin-right: -9%; vertical-align: middle; margin-bottom: 3.25em" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		<button style="max-width: 5%; margin-right: -9%" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 		  <span class="visually-hidden">Следующий</span>
 		</button>
