--- a/author.html
+++ b/author.html
@@ -6,9 +6,12 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link rel="icon" type="image/png" href="icons/1/32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="icons/1/64.png" sizes="64x64">
+	<link rel="icon" type="image/png" href="icons/1/96.png" sizes="96x96">
 	<link rel="icon" type="image/png" href="icons/1/128.png" sizes="128x128">
 	<link rel="icon" type="image/png" href="icons/1/180.png" sizes="180x180">
 	<link rel="icon" type="image/png" href="icons/1/192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="icons/1/256.png" sizes="256x256">
 	<link rel="icon" type="image/png" href="icons/1/512.png" sizes="512x512">
 	<style>
 	  .navbar {
