--- a/makent.html
+++ b/makent.html
@@ -6,9 +6,12 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link rel="icon" type="image/png" href="icons/1/32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="icons/1/64.png" sizes="64x64">
+	<link rel="icon" type="image/png" href="icons/1/96.png" sizes="96x96">
 	<link rel="icon" type="image/png" href="icons/1/128.png" sizes="128x128">
 	<link rel="icon" type="image/png" href="icons/1/180.png" sizes="180x180">
 	<link rel="icon" type="image/png" href="icons/1/192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="icons/1/256.png" sizes="256x256">
 	<link rel="icon" type="image/png" href="icons/1/512.png" sizes="512x512">
 	<style>
 	  .navbar {
@@ -51,8 +54,12 @@
     <main>
 	  <title>Ma.kak.si Makent</title>
 	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em">
-		<div class="col-md-6">Makent</div>
-		<div class="col-md-6">instaler</div>
+		<div class="col-md-6">
+			<img src="icons/1/512.png" alt="Makent">
+		</div>
+		<div class="col-md-6">
+			instaler
+		</div>
 	  </div>
     </main>
     <footer class="copybar fixed-bottom text-center text-lg-start bg-dark">
