--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
 	  </nav>
 	</header>
     <main>
-	<title>Ma.kak.si Register</title>
+	<title>Ma.kak.si Login</title>
 	  <form action="/" method="post">
 		<div class="imgcontainer">
 		  <img src="icons/1/512.png" alt="Avatar" class="avatar">
