--- a/registration.html
+++ b/registration.html
@@ -105,7 +105,7 @@
 	  </nav>
 	</header>
     <main>
-	<title>Ma.kak.si Login</title>
+	<title>Ma.kak.si Registration</title>
 	  <form action="/login">
 		<div class="container">
 		  <h1>Register</h1>
