--- a/index.html
+++ b/index.html
@@ -1,141 +1,23 @@
-<!doctype html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-	integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-	<link rel="icon" type="image/png" href="icons/1/32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="icons/1/64.png" sizes="64x64">
-	<link rel="icon" type="image/png" href="icons/1/96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="icons/1/128.png" sizes="128x128">
-	<link rel="icon" type="image/png" href="icons/1/180.png" sizes="180x180">
-	<link rel="icon" type="image/png" href="icons/1/192.png" sizes="192x192">
-	<link rel="icon" type="image/png" href="icons/1/256.png" sizes="256x256">
-	<link rel="icon" type="image/png" href="icons/1/512.png" sizes="512x512">
-	<style>
-	  body {background-image: linear-gradient(90deg, deepskyblue, skyblue, skyblue, skyblue, deepskyblue)}
-	  .navbar {border-bottom-style: ridge; border-bottom-width: 2px; border-bottom-color: deepskyblue}
-	  .navbar-brand-text, .copybar-logo {background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
-            -webkit-text-fill-color: transparent; background-clip: unset; -webkit-background-clip: text}
-	  .navbar-toggler {background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue)}
-	  .carousel, .accordion {width: 80%; margin-left: 10%}
-	  .carousel {padding-top: 8.75em; padding-bottom: 6.5em}
-	  .carousel-inner {max-height: 40em}
-	  .carousel-control-prev {max-width: 5%; margin-left: -9%}
-	  .carousel-control-next {max-width: 5%; margin-right: -9%}
-	  .accordion {padding-top: 3.25em; padding-bottom: 6.5em}
-	  .accordion-item {background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, skyblue, skyblue, deepskyblue)}
-	  .accordion-button {background: linear-gradient(90deg, deepskyblue, skyblue, skyblue, deepskyblue)}
-	  .accordion-body {max-height: 39em}
-	  .ratio-16x9 {max-height: 37em}
-	  .copybar {border-top-style: ridge; border-top-width: 2px; border-top-color: deepskyblue}
-	</style>
-  </head>
-  <body>
-	<header>
-	  <nav class="navbar fixed-top navbar-dark bg-dark">
-	    <div class="container-fluid">
-	  	  <a class="navbar-brand" href="/">
-		    <img src="icons/1/64.png" alt="Ma" width="32" height="32" class="d-inline-block align-text-top">
-		    <b class="navbar-brand-text">.kak.si</b>
-		  </a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-		  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		    <div class="navbar-nav">
-			  <a class="nav-link" href="/author">About Author</a>
-			  <a class="nav-link" href="/projects">Projects</a>
-			  <a class="nav-link" href="#">#</a>
-			  <a class="nav-link"></a>
-		    </div>
-		  </div>
-	    </div>
-	  </nav>
-	</header>
-    <main>
-	  <title>Ma.kak.si Explore</title>
-	  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-touch="false">
-		<div class="carousel-indicators">
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
-		  aria-label="Slide 1"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		</div>
-		<div class="carousel-inner">
-		  <div class="carousel-item active" data-bs-interval="6000">
-			<img src="imgs/carousel.jpg" class="d-block w-100" alt="...">
-		  </div>
-		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="imgs/carousel.jpg" class="d-block w-100" alt="...">
-		  </div>
-		  <div class="carousel-item" data-bs-interval="2000">
-			<img src="imgs/carousel.jpg" class="d-block w-100" alt="...">
-		  </div>
-		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Предыдущий</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Следующий</span>
-		</button>
-	  </div>
-	  <div class="accordion" id="accordionExample">
-		<div class="accordion-item">
-		  <h2 class="accordion-header" id="headingOne">
-			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-			aria-expanded="true" aria-controls="collapseOne">1.</button>
-		  </h2>
-		  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <div class="ratio ratio-16x9">
-				<iframe src="https://www.youtube.com/embed/A1OqtIqzScI" title="YouTube video" allowfullscreen></iframe>
-			  </div>
-			</div>
-		  </div>
-		</div>
-		<div class="accordion-item">
-		  <h2 class="accordion-header" id="headingTwo">
-			<button
-			class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-			aria-expanded="false" aria-controls="collapseTwo">2.</button>
-		  </h2>
-		  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <div class="ratio ratio-16x9">
-				<a href="/makent">makent</a>
-			  </div>
-			</div>
-		  </div>
-		</div>
-		<div class="accordion-item">
-		  <h2 class="accordion-header" id="headingThree">
-			<button
-			class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
-			aria-expanded="false" aria-controls="collapseThree">3.</button>
-		  </h2>
-		  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-			<div class="accordion-body">
-			  <div class="ratio ratio-16x9">
-				<a href="/makent">makent</a>
-			  </div>
-			</div>
-		  </div>
-		</div>
-	  </div>
-    </main>
-    <footer class="copybar fixed-bottom text-center text-lg-start bg-dark">
-	  <div class="text-center p-3">
-	    <a class="copybar-logo" href="https://pages.github.com/">Made with:</a>
-	    <a class="copybar-logo" href="https://pages.github.com/">Github Pages</a>
-	  </div>
-    </footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-	integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
-	</script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/main.css">
+    <script src="src/js/main.js"></script>
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Mapagmataas1331/website/main/icons/1/256.png">
+    <meta name="author" content="Mapagmataas">
+    <meta name="description" content="Mapagmataas' projects">
+    <meta name="keywords" content="mrkaksi, Mapagmataas">
+    <title>Explore ma.kak.si</title>
+    <link rel="stylesheet" href="src/css/index.css">
+    <script src="src/js/index.js"></script>
+</head>
+<body>
+    <div id="main">
+        <div id="hero"></div>
+        
+    </div>
+</body>
 </html>
