--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
     <link rel="stylesheet" href="src/css/main.css">
     <script src="src/js/main.js"></script>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Mapagmataas1331/website/main/icons/1/256.png">
@@ -18,9 +18,9 @@
     <div id="main">
         <div id="hero"></div>
         <div id="dpad">
-            <div class="dpad"><div></div><button class="dpad-u" onclick="moveHero(1, 0)"></button><div></div></div>
-            <div class="dpad"><button class="dpad-l" onclick="moveHero(0, 1)"></button><div></div><button class="dpad-r" onclick="moveHero(0, 0)"></button></div>
-            <div class="dpad"><div></div><button class="dpad-d" onclick="moveHero(1, 1)"></button><div></div></div>
+            <div class="dpad"><div></div><button class="dpad-u" onclick="moveHero(1, 0)">/\</button><div></div></div>
+            <div class="dpad"><button class="dpad-l" onclick="moveHero(0, 1)"><</button><div></div><button class="dpad-r" onclick="moveHero(0, 0)">></button></div>
+            <div class="dpad"><div></div><button class="dpad-d" onclick="moveHero(1, 1)">\/</button><div></div></div>
         </div>
     </div>
 </body>
