--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <link rel="stylesheet" href="src/css/main.css">
     <script src="src/js/main.js"></script>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Mapagmataas1331/website/main/icons/1/256.png">
+    <link rel="icon" type="image/png" href="src/img/background_0.png">
     <meta name="author" content="Mapagmataas">
     <meta name="description" content="Mapagmataas' projects">
     <meta name="keywords" content="mrkaksi, Mapagmataas">
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="src/css/index.css">
     <script src="src/js/index.js"></script>
 </head>
-<body>
+<body onmouseup="stopMoving()">
     <div id="main">
         <div id="hero"></div>
         <div id="dpad">
-            <div class="dpad"><div></div><button class="dpad-u" onclick="moveHero(1, 0)">/\</button><div></div></div>
-            <div class="dpad"><button class="dpad-l" onclick="moveHero(0, 1)"><</button><div></div><button class="dpad-r" onclick="moveHero(0, 0)">></button></div>
-            <div class="dpad"><div></div><button class="dpad-d" onclick="moveHero(1, 1)">\/</button><div></div></div>
+            <div class="dpad"><div></div><button class="dpad-u" onmousedown="startMoving(1, 0)" onmouseup="stopMoving()">/\</button><div></div></div>
+            <div class="dpad"><button class="dpad-l" onmousedown="startMoving(0, 1)" onmouseup="stopMoving()"><</button><div></div><button class="dpad-r" onmousedown="startMoving(0, 0)" onmouseup="stopMoving()">></button></div>
+            <div class="dpad"><div></div><button class="dpad-d" onmousedown="startMoving(1, 1)" onmouseup="stopMoving()">\/</button><div></div></div>
         </div>
     </div>
 </body>
