--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="main">
         <div id="hero"></div>
         <div id="dpad">
-            <div class="dpad"><div></div><button class="dpad-u" onmousedown="startMoving(1, 0)" onmouseup="stopMoving()">/\</button><div></div></div>
+            <div class="dpad"><div></div><button class="dpad-u" onmousedown="startMoving(1, 0)" onmouseup="stopMoving()">/\</button><div></div></div> //touchstart touchcancel 
             <div class="dpad"><button class="dpad-l" onmousedown="startMoving(0, 1)" onmouseup="stopMoving()"><</button><div></div><button class="dpad-r" onmousedown="startMoving(0, 0)" onmouseup="stopMoving()">></button></div>
             <div class="dpad"><div></div><button class="dpad-d" onmousedown="startMoving(1, 1)" onmouseup="stopMoving()">\/</button><div></div></div>
         </div>
