--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="noselect">
     <canvas id="joystick"></canvas>
     <div id="main">
-        <div id="hero"></div>
+        <div id="hero" class="hero"></div>
     </div>
 </body>
 </html>
