--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="description" content="Mapagmataas' projects">
     <meta name="keywords" content="mrkaksi, Mapagmataas">
     <title>Explore ma.kak.si</title>
-    <link rel="stylesheet" href="src/css/index.css">
-    <script src="src/js/index.js"></script>
+    <link rel="stylesheet" href="src/css/game.css">
+    <script src="src/js/game.js"></script>
 </head>
 <body class="noselect">
     <canvas id="joystick"></canvas>
     <div id="main">
-        <div id="hero" class="hero"></div>
+        <div id="hero" class="hero"><p>Mapagmataas</p><div id="hero-img"></div></div>
     </div>
 </body>
 </html>
