--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <script src="src/js/game.js"></script>
 </head>
 <body class="noselect">
-    <canvas id="joystick"></canvas>
+    <div id="log-menu">
+        
+    </div>
     <div id="main">
         <div id="hero" class="hero"><p>Mapagmataas</p><div id="hero-img"></div></div>
+        <canvas id="joystick"></canvas>
     </div>
 </body>
 </html>
