--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <button type="submit">Send</button>
         </form>
     </div>
-    <div id="main">
-        <div id="hero" class="hero"><p>Mapagmataas</p><div id="hero-img"></div></div>
-    </div>
-<canvas id="joystick"></canvas>
+    <div id="main"></div>
+    <canvas id="joystick"></canvas>
 </body>
 </html>
