--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="src/css/main.css">
     <script src="src/js/main.js"></script>
     <script src="src/js/db.js"></script>
-    <link rel="icon" type="image/png" href="src/img/game/backgrounds/0.png">
+    <link rel="icon" type="image/png" href="src/img/icon/512.png">
     <meta name="author" content="Mapagmataas">
     <meta name="description" content="Mapagmataas' projects">
     <meta name="keywords" content="mrkaksi, Mapagmataas">
     <title>Explore ma.kak.si</title>
-    <link rel="stylesheet" href="src/css/game.css">
-    <script src="src/js/game.js"></script>
+    <link rel="stylesheet" href="src/css/index.css">
+    <script src="src/js/index.js"></script>
 </head>
 <body class="noselect">
     <div id="log-menu">
@@ -24,7 +24,5 @@
             <button type="submit">Send</button>
         </form>
     </div>
-    <div id="main"></div>
-    <canvas id="joystick"></canvas>
 </body>
 </html>
