--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="nav-cont">
         <div onclick="location.href = 'https://ma.kak.si';">
             <img src="src/img/icon/512.png" alt="icon">
+            <p>.kak.si</p>
         </div>
     </div>
     <div id="log-menu">
