--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
     <link rel="stylesheet" href="src/css/main.css">
     <script src="src/js/main.js"></script>
-    <script src="src/js/db.js"></script>
     <link rel="icon" type="image/png" href="src/img/icon/512.png">
     <meta name="author" content="Mapagmataas">
     <meta name="description" content="Mapagmataas' projects">
@@ -21,7 +20,7 @@
             <img src="src/img/icon/512.png" alt="Ma">
             <p>.kak.si</p>
         </div>
-        <button onclick="appear();">log</button>
+        <button onclick="appear(nav);">=</button>
     </div>
     <div id="black-bg" style="display: none;">
         <form id="log-form" action="javascript:;" onsubmit="db.log(this.uname.value, this.upass.value)">
