--- a/index.html
+++ b/index.html
@@ -1,26 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
-    <link rel="stylesheet" href="src/css/main.css">
-    <script src="src/js/main.js"></script>
-    <link rel="icon" type="image/png" href="src/img/icon/512.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="author" content="Mapagmataas">
-    <meta name="description" content="Mapagmataas' projects">
-    <meta name="keywords" content="mrkaksi, Mapagmataas">
-    <title>Explore ma.kak.si</title>
-    <link rel="stylesheet" href="src/css/index.css">
-    <script src="src/js/index.js"></script>
+    <meta name="description" content="НВБ">
+    <meta name="keywords" content="m, ma, makak, makaksi, mr, mrkaksi, nvb, нвб, buisnes">
+
+    <link rel="icon" type="image/png" href="src/img/icon.png">
+    <link rel="stylesheet" href="src/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <div id="nav-cont">
-        <div onclick="location.href = 'https://ma.kak.si';">
-            <img src="src/img/icon/512.png" alt="Ma">
-            <p>.kak.si</p>
+    <div id="nav">
+        <a href="index.html" title="Novo-Business">
+            <img src="src/img/icon.png" alt="icon">
+            <p data-translate>NB</p>
+        </a>
+        <div>
+            <p id="lang-btn" class="spinner noselect">Ru</p>
+            <i id="mode-btn" class="material-icons spinner noselect">light_mode</i>
+            <i id="menu-btn" class="material-icons spinner noselect">menu</i>
         </div>
-        <button onclick="appear(nav);">=</button>
     </div>
+    <ul id="dropdown-menu" style="display: none;">
+        <li class="dropdown-item" data-translate>Item 1</li>
+        <li class="dropdown-item" data-translate>Item 2</li>
+        <li class="dropdown-item" data-translate>Item 3</li>
+        <li class="dropdown-item" data-translate>Item 4</li>
+        <li class="dropdown-item" data-translate>Item 5</li>
+        <li class="dropdown-item" data-translate>Item 6</li>
+    </ul>
+    <title data-translate>Novo-Business</title>
+    <div class="main-info">
+        <img src="src/img/project.png">
+        <h3 data-translate>Project</h3>
+        <p data-translate>Many many many many many many many many many many info about project.</p>
+    </div>
+    <div class="container-wrapper">
+        <div class="container">
+            <img src="src/img/previews/preview1.png">
+            <h3 data-translate>Я Егор,</h3>
+            <p data-translate>Мне 16, Я Финансист-предприниматель.</p>
+        </div>
+        <div class="container">
+            <img src="src/img/previews/preview2.png">
+            <h3 data-translate>Я Оля,</h3>
+            <p data-translate>Мне 17, Я универсал, развита во многих сферах и отраслях.</p>
+        </div>
+        <div class="container">
+            <img src="src/img/previews/preview3.png">
+            <h3 data-translate>Я Никита,</h3>
+            <p data-translate>Мне 17 лет, Я «психолог-коммерсант».</p>
+        </div>
+    </div>
+    <div class="container-wrapper">
+        <div class="container">
+            <img src="src/img/previews/preview4.png">
+            <h3 data-translate>Container 4</h3>
+            <p data-translate>Many many many many many many many many many many info about Container 4.</p>
+        </div>
+        <div class="container">
+            <img src="src/img/previews/preview5.png">
+            <h3 data-translate>Container 5</h3>
+            <p data-translate>Many many many many many many many many many many info about Container 5.</p>
+        </div>
+        <div class="container">
+            <img src="src/img/previews/preview6.png">
+            <h3 data-translate>Container 6</h3>
+            <p data-translate>Many many many many many many many many many many info about Container 6.</p>
+        </div>
+    </div>
+    <script src="src/main.js"></script>
 </body>
 </html>
