--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="author" content="Mapagmataas">
-    <meta name="description" content="НВБ">
-    <meta name="keywords" content="m, ma, makak, makaksi, mr, mrkaksi, nvb, нвб, buisnes">
+    <meta name="description" content="ma_dot">
+    <meta name="keywords" content="m, ma, ma., ma_dot, madot, mapagmataas, makak, makaksi, mr, mrkaksi">
 
     <link rel="icon" type="image/png" href="src/img/icon.png">
     <link rel="stylesheet" href="src/main.css">
@@ -15,9 +15,9 @@
 </head>
 <body>
     <div id="nav">
-        <a href="index.html" title="Novo-Business">
+        <a href="index.html">
             <img src="src/img/icon.png" alt="icon">
-            <p data-translate>NB</p>
+            <p data-translate>.kak.si</p>
         </a>
         <div>
             <p id="lang-btn" class="spinner noselect">Ru</p>
@@ -33,46 +33,8 @@
         <li class="dropdown-item" data-translate>Item 5</li>
         <li class="dropdown-item" data-translate>Item 6</li>
     </ul>
-    <title data-translate>Novo-Business</title>
-    <div class="main-info">
-        <img src="src/img/project.png">
-        <h3 data-translate>Project</h3>
-        <p data-translate>Many many many many many many many many many many info about project.</p>
-    </div>
-    <div class="container-wrapper">
-        <div class="container">
-            <img src="src/img/previews/preview1.png">
-            <h3 data-translate>Я Егор,</h3>
-            <p data-translate>Мне 16, Я Финансист-предприниматель.</p>
-        </div>
-        <div class="container">
-            <img src="src/img/previews/preview2.png">
-            <h3 data-translate>Я Оля,</h3>
-            <p data-translate>Мне 17, Я универсал, развита во многих сферах и отраслях.</p>
-        </div>
-        <div class="container">
-            <img src="src/img/previews/preview3.png">
-            <h3 data-translate>Я Никита,</h3>
-            <p data-translate>Мне 17 лет, Я «психолог-коммерсант».</p>
-        </div>
-    </div>
-    <div class="container-wrapper">
-        <div class="container">
-            <img src="src/img/previews/preview4.png">
-            <h3 data-translate>Container 4</h3>
-            <p data-translate>Many many many many many many many many many many info about Container 4.</p>
-        </div>
-        <div class="container">
-            <img src="src/img/previews/preview5.png">
-            <h3 data-translate>Container 5</h3>
-            <p data-translate>Many many many many many many many many many many info about Container 5.</p>
-        </div>
-        <div class="container">
-            <img src="src/img/previews/preview6.png">
-            <h3 data-translate>Container 6</h3>
-            <p data-translate>Many many many many many many many many many many info about Container 6.</p>
-        </div>
-    </div>
+    <title data-translate>ma.kak.si</title>
+
     <script src="src/main.js"></script>
 </body>
 </html>
