--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <i id="menu-btn" class="material-icons spinner">menu</i>
     </div>
   </div>
-  <ul id="dropdown-menu" style="display: none;">
+  <ul id="dropdown-menu" style="display: none;" class="noselect">
     <li class="dropdown-item" onclick="hrefTo('author')" data-translate>Author</li>
     <li class="dropdown-item" onclick="hrefTo()" data-translate>Item 2</li>
     <li class="dropdown-item" onclick="hrefTo()" data-translate>Item 3</li>
