--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <li class="dropdown-item" onclick="hrefTo()" data-translate>Item 5</li>
     <li class="dropdown-item" onclick="hrefTo()" data-translate>Item 6</li>
   </ul>
-  <title>.in</title>
+  <title>ma.in</title>
 
   <script src="src/bundle.js"></script>
   <script src="src/main.js"></script>
