--- a/author.html
+++ b/author.html
@@ -9,7 +9,7 @@
   <meta name="description" content="ma_dot">
   <meta name="keywords" content="m, ma, ma., ma_dot, madot, mapagmataas, makak, makaksi, mr, mrkaksi">
 
-  <link rel="icon" type="image/png" href="src/img/icon.png">
+  <link rel="icon" type="image/png" href="src/img/ma-icon.png">
   <link rel="stylesheet" href="src/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
