--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     <li class="dropdown-item" onclick="hrefTo()" data-translate>Item 6</li>
   </ul>
   <title>ma.in</title>
-
+  <div id="content">
+    <div>
+      <img src="src/img/ma-icon.png" alt="ma-icon">
+      <h2>ma.kak.si</h2>
+    </div>
+  </div>
   <script src="src/bundle.js"></script>
   <script src="src/main.js"></script>
 </body>
