--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div id="content">
     <div>
       <img src="src/img/ma-icon.png" alt="ma-icon">
-      <h2>ma.kak.si</h2>
+      <p>ma.kak.si</p>
     </div>
   </div>
   <script src="src/bundle.js"></script>
