--- a/index.html
+++ b/index.html
@@ -13,23 +13,13 @@
   <link rel="stylesheet" href="src/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-<title>ma.in</title>
+<title id="title">ma.</title>
 <body>
-  <div id="notification-zone">
-    <!-- <div class="notification notify">
-
-    </div>
-    <div class="notification alert">
-      
-    </div>
-    <div class="notification error">
-      
-    </div> -->
-  </div>
+  <div id="notification-zone"></div>
   <div id="header" class="noselect">
     <div>
       <p>ma.</p>
-      <p id="current-page" class="link">in</p>
+      <p id="current-page" class="link"></p>
     </div>
     <div onclick="">
       <i class="material-icons spinner link">
@@ -38,15 +28,15 @@
     </div>
   </div>
   <div id="navigation" style="display: block;">
-    <div class="nav-item" id="index">
-      <p class="nav-item-title">in (index)</p>
+    <div class="nav-item" id="in">
+      <p class="nav-item-title">index</p>
       <p class="nav-item-description">main page</p>
     </div>
     <div class="nav-item" id="author">
       <p class="nav-item-title">author</p>
       <p class="nav-item-description">about author</p>
     </div>
-    <div class="nav-item" id="account">
+    <div class="nav-item" id="acc">
       <p class="nav-item-title">account</p>
       <p class="nav-item-description">your account</p>
     </div>
