--- a/account.html
+++ b/account.html
@@ -46,7 +46,7 @@
   </div>
 
   <div id="content">
-    <a href="/aaa">aaa</a>
+    <p style="font-size: 50vw; text-align: center;">acc</p>
   </div>
 
   <script src="src/bundle.js"></script>
