--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
 
   <div id="content">
-    {{ content }}
+    <p style="font-size: 50vw; text-align: center;">ind</p>
   </div>
 
   <script src="src/bundle.js"></script>
