--- a/account.html
+++ b/account.html
@@ -27,7 +27,7 @@
       </i>
     </div>
   </div>
-  <div id="navigation" style="display: block;">
+  <div id="navigation" style="display: none;">
     <div class="nav-item" id="in">
       <p class="nav-item-title">index</p>
       <p class="nav-item-description">main page</p>
