--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <i class="material-icons spinner link">
         settings
       </i>
+    <!-- expand_circle_down -->
     </div>
   </div>
   <div id="navigation" style="display: none;">
@@ -41,8 +42,20 @@
       <p class="nav-item-description">your account</p>
     </div>
   </div>
-  <div id="settings-menu" class="noselect" style="display: none;">
-
+  <div id="settings-menu" class="noselect" style="display: block;">
+    <div class="settings-section">
+        <p class="settings-section-name">General Settings</p>
+        <div class="setting">
+            <p class="setting-name">Theme:</p>
+            <p class="setting-param current">Dark</p>
+            <p class="setting-param">Light</p>
+        </div>
+        <div class="setting">
+            <p class="setting-name">Language:</p>
+            <p class="setting-param current">English</p>
+            <p class="setting-param">Russian</p>
+        </div>
+    </div><br>
   </div>
 
   <div id="content">
