--- a/account.html
+++ b/account.html
@@ -62,6 +62,11 @@
 
   <div id="content">
     <p style="font-size: 50vw; text-align: center;">acc</p>
+    <form style="text-align: center;" action="javascript:;" onsubmit="reglog(uname.value, pass.value);">
+      <input style="background-color: black;" type="text" name="uname" id="uname" value="username" required>
+      <input style="background-color: black;" type="password" name="pass" id="pass" value="password" required>
+      <input style="background-color: black;" type="submit" value="send">
+    </form>
   </div>
 
   <script src="src/main.js"></script>
