--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <meta name="author" content="Mapagmataas">
   <meta name="description" content="ma_dot">
-  <meta name="keywords" content="m, ma, ma., ma_dot, madot, mapagmataas, makak, makaksi, mr, mrkaksi">
+  <meta name="keywords" content="m, map, mapag, mapagmat, mapagmatas, mapagmataas, 1331, kak, si, kaksi, kak si, dot, 
+ma, ma., madot, ma dot, ma_dot, makak, ma kak, makaksi, ma kak si, ma.kak.si, 
+mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
 
   <link rel="icon" type="image/png" href="src/img/ma-icon.png">
   <link rel="stylesheet" href="src/main.css">
