--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
   </div>
 
   <script src="src/main.js"></script>
-  <script src="src/bundle.js"></script>
+  <script src="src/bundle/bundle.js"></script>
 </body>
 </html>
