--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <p id="current-page" class="link"></p>
     </div>
     <div>
-      <i class="material-icons spinner link">
-        settings
-      </i>
+      <i class="material-icons spinner link">settings</i>
     <!-- expand_circle_down -->
     </div>
   </div>
@@ -60,6 +58,11 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
             <p id="ru" class="setting-param" data-translate>Russian</p>
         </div>
     </div><br>
+    <form action="javascript:;" onsubmit="report(msg.value);">
+      <i class="material-icons spinner">report</i>
+      <p>Report a problem: </p>
+      <input type="text" name="msg" id="msg" required>
+    </form><br>
   </div>
 
   <div id="content">
